# shmem

./: .gitignore  README.md  bench_store.py  benchmark.py  main.py  pyproject.toml
shmem/: __init__.py  allocator.py  errors.py  index.py  layout.py  store.py
tests/: test_allocator.py  test_concurrency.py  test_index.py  test_layout.py  test_store.py
