[project]
name = "shmem"
version = "0.1.0"
description = "Zero-copy shared memory key-value store for numpy arrays and raw bytes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shmem"]
